# swaydos

./: CMakeLists.txt  LICENSE  README.md
assets/: iconset.kra
source/: ave_libs.hpp  main.cpp  swayconfig.hpp  window.cpp  window.hpp
source/applications/: README.md  filemgr.cpp  swaymsg.cpp
